- API: FrontendSettingsList now orders its items alphabetically
- Bugfix: Deutsche Übersetzung aktualisiert (German translation updated)
- Bugfix: FocusController now does not select a (more or less) random Component if the caller indicates that Swing itself will issue a focus request in the future. This means that clicking on the dropdown-button of a JCombobBox will not close the popup again because focus is transfered.
! API: CDockableStateListener no longer has one method for each ExtendedMode, instead one method handles all possible ExtendedModes. Clients can extend CDockableAdapter to keep the old API.
- Bugfix: Some StationPaints did not properly use the colors from the ColorManager
- Bugfix: CGlassStationPaint was not applied when using the Glass extension
- API: The new CDockableLocationListener can be used to observe location and visibility (to the user) of a CDockable

[v1.1.0p5a]
- Bugfix: StackDockStation and FlapDockStation did not fire dockablesRepositioned if its content was only moved

[v1.1.0p5b]
! API: DockSituation can now use a PlaceholderStrategy to load the intermediate format and another strategy to load the final DockElements. The DockFactories had to be modified in order to allow this.
- Bugfix: In Common, placeholders are no longer removed in the intermediate layout information no longer
- Bugfix: The FocusStrategy can now decide whether to transfer focus if the user clicked on a non-focusable Component or not. Currently focus is not transfered if the user clicked on a JComboBox
- API: The content-pane of a Dockable is no longer focusable

[v1.1.0p5c]
- Bugfix: Perspectives did ignore the "ignoreChildren" tag. DockFactories did throw NPE if called with a perspective that has the "ignoreChildren" tag set to true.
- API: Additional method "isWorkingArea" in "CStationPerspective".